; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswresample/extr_soxr_resample.c_invert_initial_buffer.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswresample/extr_soxr_resample.c_invert_initial_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ResampleContext = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ResampleContext*, i32*, i32*, i32, i32*, i32*)* @invert_initial_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @invert_initial_buffer(%struct.ResampleContext* %0, i32* %1, i32* %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca %struct.ResampleContext*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store %struct.ResampleContext* %0, %struct.ResampleContext** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
